--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 djoser==2.2.0
 drf-yasg==1.21.7
+gunicorn==21.2.0
 idna==3.4
 inflection==0.5.1
 oauthlib==3.2.2
