--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ idna==3.4
 inflection==0.5.1
 oauthlib==3.2.2
 packaging==23.1
+Pillow==10.0.0
 psycopg2-binary==2.9.6
 pycparser==2.21
 PyJWT==2.8.0
