update vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,10 @@
       "src": "/static/(.*)",
       "dest": "/static/$1"
     },
+      {
+    "src": "/media/(.*)",
+    "dest": "/media/$1"
+  },
     {
       "src": "/(.*)",
       "dest": "chytozavrik/wsgi.py"
