--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,17 @@
       "config": {
         "distDir": "staticfiles_build"
       }
+    },
+    {
+      "src": "media/(.*)",
+      "use": "@vercel/static",
+      "config": {
+        "headers": {
+          "/media/(.*)": {
+            "Cache-Control": "public, max-age=604800, immutable"
+          }
+        }
+      }
     }
   ],
   "routes": [
@@ -19,10 +30,10 @@
       "src": "/static/(.*)",
       "dest": "/static/$1"
     },
-      {
-    "src": "/media/(.*)",
-    "dest": "/media/$1"
-  },
+    {
+      "src": "/media/(.*)",
+      "dest": "/media/$1"
+    },
     {
       "src": "/(.*)",
       "dest": "chytozavrik/wsgi.py"
