--- a/vercel.json
+++ b/vercel.json
@@ -25,8 +25,7 @@
       }
     },
     {
-      "src": "public/(.*)",
-      "dest": "/public/$1"
+      "src": "public/(.*)"
     },
     {
       "src": "/(.*)",
