--- a/vercel.json
+++ b/vercel.json
@@ -14,18 +14,18 @@
       }
     }
   ],
-  "rewrites": [
+  "routes": [
     {
-      "source": "/media/(.*)",
-      "destination": "/media/$1"
+      "src": "^/media/(.*)",
+      "dest": "/media/$1"
     },
     {
-      "source": "/public/(.*)",
-      "destination": "/public/$1"
+      "src": "^/public/(.*)",
+      "dest": "/public/$1"
     },
     {
-      "source": "/(.*)",
-      "destination": "/chytozavrik/wsgi.py"
+      "src": ".*",
+      "dest": "/chytozavrik/wsgi.py"
     }
   ]
 }
