--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.2.0
 cryptography==41.0.2
 defusedxml==0.7.1
 Django==4.2.3
+django-cleanup==8.0.0
 django-cors-headers==4.2.0
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
