--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Django==4.2.3
 django-cleanup==8.0.0
 django-cloudinary-storage==0.3.0
 django-cors-headers==4.2.0
+django-phonenumber-field==7.1.0
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
@@ -19,6 +20,7 @@ idna==3.4
 inflection==0.5.1
 oauthlib==3.2.2
 packaging==23.1
+phonenumberslite==8.13.20
 Pillow==10.0.0
 psycopg2-binary==2.9.6
 pycparser==2.21
