--- a/.env_example
+++ b/.env_example
@@ -11,3 +11,7 @@ SQL_PORT = 5432
 EMAIL_HOST = outlook.office365.com
 EMAIL_USER = chitozavrik@outlook.com
 EMAIL_PASSWORD = Chitozavrik123
+
+CLOUD_NAME = dxy59ulvk
+API_KEY = 278962861511889
+API_SECRET = oQ84yvZvZtiRnXZJJSATiGvIel8
