feat: Implemented the documents section with empty files created during application initialization and endpoints (getting a list of documents, an id document and separate endpoints for getting a privacy policy and site rules); feat: Users are now created automatically after migration (data is taken from the .env file); fix: Sending notifications to the mail in development mode is activated.

--- a/.env_example
+++ b/.env_example
@@ -1,6 +1,6 @@
 SECRET_KEY = secret
 DJANGO_SUPERUSER_EMAIL = admin@admin.com
-DJANGO_SUPERUSER_PASSWORD = admin
+DJANGO_SUPERUSER_PASSWORD = admin1
 
 SQL_DATABASE = chitozavrik
 SQL_USER = admin
