chore: else  one check filesystem

--- a/vercel.json
+++ b/vercel.json
@@ -20,6 +20,10 @@
       "dest": "/static/$1"
     },
     {
+      "src": "/media/(.*)", 
+      "dest": "/media/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "chytozavrik/wsgi.py"
     }
