chore: check filesystem result

--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,13 @@
       "config": {
         "distDir": "staticfiles_build"
       }
+    },
+    {
+      "src": "media",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "media"
+      }
     }
   ],
   "routes": [
