feat; add reset password and change password endpoints

--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,6 @@ social-auth-core==4.4.2
 sqlparse==0.4.4
 typing_extensions==4.7.1
 uritemplate==4.1.1
-
+dj-rest-auth==5.0.1
 urllib3==1.26.16
 black
