--- a/.env_example
+++ b/.env_example
@@ -8,10 +8,9 @@ SQL_PASSWORD = admin
 SQL_HOST = localhost
 SQL_PORT = 5432
 
-EMAIL_HOST = smtp.gmail.com
-EMAIL_PORT = 465
-EMAIL_USER = email@gmail.com
-EMAIL_PASSWORD = password
+EMAIL_HOST = outlook.office365.com
+EMAIL_USER = chitozavrik@outlook.com
+EMAIL_PASSWORD = Ch1tozavrik
 
 CLOUD_NAME = dxy59ulvk
 API_KEY = 278962861511889
