--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,15 @@ services:
       - POSTGRES_PASSWORD=admin
       - POSTGRES_DB=chitozavrik
     restart: always
+
+  redis:
+    container_name: chitozavrik-redis
+    image: redis:7.2.3
+    restart: on-failure
+    env_file:
+      - .env
+    ports:
+      - ${REDIS_PORT}:${REDIS_PORT}
+    expose:
+      - ${REDIS_PORT}
+    command: ["redis-server", "--requirepass ${REDIS_PASSWORD}", "--maxmemory", "100mb", "--maxmemory-policy", "allkeys-lru"]
