feat: add dockerfile and configuration for gunicorn web server

--- a/.env_example
+++ b/.env_example
@@ -1,6 +1,7 @@
 SECRET_KEY = secret
 DJANGO_SUPERUSER_EMAIL = admin@admin.com
 DJANGO_SUPERUSER_PASSWORD = admin1
+APP_PORT = 8000
 
 SQL_DATABASE = chitozavrik
 SQL_USER = admin
