fix: change env example

--- a/.env_example
+++ b/.env_example
@@ -13,6 +13,6 @@ EMAIL_PORT = 465
 EMAIL_USER = email@gmail.com
 EMAIL_PASSWORD = password
 
-CLOUD_NAME = dxy59ulvk
-API_KEY = 278962861511889
-API_SECRET = oQ84yvZvZtiRnXZJJSATiGvIel8
+CLOUD_NAME = dxabc1111
+API_KEY = 27896abc1111
+API_SECRET = oQ84yvZvZtiRnXZJabc1111
