feat: add payment endpoint

--- a/.env_example
+++ b/.env_example
@@ -2,6 +2,10 @@ SECRET_KEY = secret
 DJANGO_SUPERUSER_EMAIL = admin@admin.com
 DJANGO_SUPERUSER_PASSWORD = admin1
 
+SITE_URL = https://chytozavrik-frontend.vercel.app
+MERCHANT_ACCOUNT = account
+MERCHANT_SECRET = secret
+
 SQL_DATABASE = chitozavrik
 SQL_USER = admin
 SQL_PASSWORD = admin
