--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,37 @@ services:
     image: postgres:latest
     container_name: postgres_db
     ports:
-      - "$SQL_PORT:5432"
+      - ${SQL_PORT:-5432}:5432
     environment:
       - POSTGRES_USER=$SQL_USER
       - POSTGRES_PASSWORD=$SQL_PASSWORD
       - POSTGRES_DB=$SQL_DATABASE
     restart: always
+
+  redis:
+    container_name: redis
+    image: redis:7.2.3
+    restart: on-failure
+    ports:
+      - ${REDIS_PORT}:6379
+    command: ["redis-server", "--requirepass ${REDIS_PASSWORD}", "--maxmemory", "100mb", "--maxmemory-policy", "allkeys-lru"]
+
+  # backend_app:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile.backend
+  #   container_name: backend_app
+  #   ports:
+  #     - ${BACKEND_PORT:-8000}:8000
+  #   depends_on:
+  #     - postgres
+
+  # frontend_app:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile.frontend
+  #   container_name: frontend_app
+  #   ports:
+  #     - ${FRONTEND_PORT:-3000}:3000
+  #   depends_on:
+  #     - backend_app
