fix: build.sh and some refactorign

--- a/.env_example
+++ b/.env_example
@@ -12,6 +12,10 @@ SQL_PASSWORD = admin
 SQL_HOST = localhost
 SQL_PORT = 5432
 
+REDIS_HOST = localhost
+REDIS_PASSWORD = admin
+REDIS_PORT = 6379
+
 EMAIL_HOST = smtp.gmail.com
 EMAIL_PORT = 465
 EMAIL_USER = email@gmail.com
