--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -7,11 +7,12 @@ RUN mkdir /backend_app
 
 WORKDIR /backend_app
 
-COPY backend .
+COPY . .
 
-RUN pip install --upgrade pip && \
+RUN pip install -U pip && \
     pip install -r requirements.txt
 
 CMD bash -c "python manage.py collectstatic --no-input &&\
     python manage.py migrate && \
-    gunicorn -c gunicorn.conf.py chytozavrik.wsgi:application
+    gunicorn -c gunicorn.conf.py chytozavrik.wsgi:app
+# TODO
