--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,9 +19,18 @@ services:
     restart: on-failure
     ports:
       - ${REDIS_PORT}:6379
-    command: ["redis-server", "--requirepass ${REDIS_PASSWORD}", "--maxmemory", "100mb", "--maxmemory-policy", "allkeys-lru"]
-
-  # backend_app:
+    command:
+      [
+        "redis-server",
+        "--requirepass ${REDIS_PASSWORD}",
+        "--maxmemory",
+        "100mb",
+        "--maxmemory-policy",
+        "allkeys-lru"
+      ]
+      
+# TODO
+  # backend_app: 
   #   build:
   #     context: .
   #     dockerfile: Dockerfile.backend
@@ -30,8 +39,8 @@ services:
   #     - ${BACKEND_PORT:-8000}:8000
   #   depends_on:
   #     - postgres
-
-  # frontend_app:
+      
+  # frontend:
   #   build:
   #     context: .
   #     dockerfile: Dockerfile.frontend
