--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,15 +19,10 @@ services:
     restart: on-failure
     ports:
       - ${REDIS_PORT}:6379
-    command:
-      [
-        "redis-server",
-        "--requirepass ${REDIS_PASSWORD}",
-        "--maxmemory",
-        "100mb",
-        "--maxmemory-policy",
-        "allkeys-lru"
-      ]
+    command: >
+      redis-server --requirepass $REDIS_PASSWORD
+                   --maxmemory 100mb
+                   --maxmemory-policy allkeys-lru
       
 # TODO
   # backend_app: 
@@ -40,7 +35,7 @@ services:
   #   depends_on:
   #     - postgres
       
-  # frontend:
+  # frontend_app:
   #   build:
   #     context: .
   #     dockerfile: Dockerfile.frontend
