--- a/.env_example
+++ b/.env_example
@@ -1,26 +1,36 @@
-SECRET_KEY = secret
-DJANGO_SUPERUSER_EMAIL = admin@admin.com
-DJANGO_SUPERUSER_PASSWORD = admin1
+# FOR .env in prod root path
+# BACKEND_PORT = 6501
+# SQL_DATABASE = chytozavryk_db
+# SQL_USER = changeme
+# SQL_PASSWORD = changeme
+# SQL_PORT = 6502
+# REDIS_PASSWORD = changeme
+# REDIS_PORT = 6503
+
+SECRET_KEY = changeme
+DJANGO_SUPERUSER_EMAIL = admin@example.com
+DJANGO_SUPERUSER_PASSWORD = changeme
 
 SITE_URL = https://chytozavrik-frontend.vercel.app
-MERCHANT_ACCOUNT = account
-MERCHANT_SECRET = secret
+MERCHANT_ACCOUNT = changeme
+MERCHANT_SECRET = changeme
 
-SQL_DATABASE = chitozavrik
-SQL_USER = admin
-SQL_PASSWORD = admin
-SQL_HOST = localhost
+SQL_DATABASE = chytozavryk_db
+SQL_USER = changeme
+SQL_PASSWORD = changeme
+SQL_HOST = postgres_chytozavryk
 SQL_PORT = 5432
 
-REDIS_HOST = localhost
-REDIS_PASSWORD = admin
+REDIS_PASSWORD = changeme
 REDIS_PORT = 6379
+REDIS_HOST = redis_chytozavryk
 
 EMAIL_HOST = smtp.gmail.com
 EMAIL_PORT = 465
 EMAIL_USER = email@gmail.com
 EMAIL_PASSWORD = password
 
-CLOUD_NAME = dxabc1111
-API_KEY = 27896abc1111
-API_SECRET = oQ84yvZvZtiRnXZJabc1111
+CLOUD_NAME = changeme
+API_KEY = changeme
+API_SECRET = changeme
+
