--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3'
+version: '3.8'
 
 services:
 
   postgres:
     image: postgres:latest
-    container_name: postgres_db
+    container_name: postgres_chytozavryk
     ports:
       - ${SQL_PORT:-5432}:5432
     environment:
@@ -12,29 +12,34 @@ services:
       - POSTGRES_PASSWORD=$SQL_PASSWORD
       - POSTGRES_DB=$SQL_DATABASE
     restart: always
+    networks:
+      - chytozavryk
 
   redis:
-    container_name: redis
+    container_name: redis_chytozavryk
     image: redis:7.2.3
-    restart: on-failure
     ports:
       - ${REDIS_PORT}:6379
-    command: >
-      redis-server --requirepass $REDIS_PASSWORD
-                   --maxmemory 100mb
-                   --maxmemory-policy allkeys-lru
-      
-# TODO
-  # backend_app: 
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile.backend
-  #   container_name: backend_app
-  #   ports:
-  #     - ${BACKEND_PORT:-8000}:8000
-  #   depends_on:
-  #     - postgres
-      
+    command:
+      redis-server --port $REDIS_PORT --requirepass $REDIS_PASSWORD --maxmemory 100mb
+    restart: always
+    networks:
+      - chytozavryk
+
+  backend_app:
+    build:
+      context: .
+      dockerfile: Dockerfile.backend
+    container_name: backend_app_chytozavryk
+    ports:
+      - ${BACKEND_PORT:-8000}:8000
+    command: [ 'bash', 'scripts/backend_app.sh' ]
+    depends_on:
+      - postgres
+      - redis
+    restart: always
+    networks:
+      - chytozavryk
   # frontend_app:
   #   build:
   #     context: .
@@ -44,3 +49,9 @@ services:
   #     - ${FRONTEND_PORT:-3000}:3000
   #   depends_on:
   #     - backend_app
+  #   networks:
+  #   - chytozavryk
+
+networks:
+  chytozavryk:
+    driver: bridge
