--- a/nginx/backend.conf
+++ b/nginx/backend.conf
@@ -1,13 +1,12 @@
 server {
-    #listen 6500 ssl;
-    listen 6500;
-    server_name default_server;
+    listen 6500 ssl;
+    server_name chytozavryk.mooo.com;
 
-    # ssl_certificate /etc/letsencrypt/live/advokato.mooo.com/fullchain.pem;
-    # ssl_certificate_key /etc/letsencrypt/live/advokato.mooo.com/privkey.pem;
+    ssl_certificate /certs/fullchain.pem;
+    ssl_certificate_key /certs/privkey.pem;
 
-    # ssl_protocols TLSv1.2 TLSv1.3;
-    # ssl_prefer_server_ciphers off;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers off;
 
     location / {
         proxy_pass http://backend_app:8000;
