--- a/nginx/frontend.conf
+++ b/nginx/frontend.conf
@@ -2,8 +2,8 @@ server {
     listen 6500 ssl;
     server_name default_server;
 
-    ssl_certificate /etc/letsencrypt/live/advokato.mooo.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/advokato.mooo.com/privkey.pem;
+    ssl_certificate /certs/fullchain.pem;
+    ssl_certificate_key /certs/privkey.pem;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers off;
@@ -29,8 +29,8 @@ server {
     listen 443 ssl;
     server_name chytozavryk.mooo.com;
 
-    ssl_certificate /01cert/fullchain.pem;
-    ssl_certificate_key /01cert/privkey.pem;
+    ssl_certificate /certs/fullchain.pem;
+    ssl_certificate_key /certs/privkey.pem;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers off;
