--- a/Dockerfile.proxy
+++ b/Dockerfile.proxy
@@ -1,4 +1,5 @@
 FROM nginx:latest
 
 COPY nginx/backend.conf /etc/nginx/conf.d/default.conf
+COPY frontend .
 # COPY nginx/frontend.conf /etc/nginx/conf.d/
