--- a/Dockerfile.proxy
+++ b/Dockerfile.proxy
@@ -1,5 +1,5 @@
 FROM nginx:latest
 
 COPY nginx/backend.conf /etc/nginx/conf.d/default.conf
-COPY frontend .
+# COPY frontend .
 # COPY nginx/frontend.conf /etc/nginx/conf.d/
