--- a/backend/.env_example
+++ b/backend/.env_example
@@ -1,28 +1,23 @@
-BACKEND_PORT = 6501
-SECRET_KEY = changeme
-DJANGO_SUPERUSER_EMAIL = admin@example.com
-DJANGO_SUPERUSER_PASSWORD = changeme
+BACKEND_PORT=6501
+SECRET_KEY=changeme
+DJANGO_SUPERUSER_EMAIL=admin@example.com
+DJANGO_SUPERUSER_PASSWORD=changeme
 
-SITE_URL = https://chytozavrik-frontend.vercel.app
-MERCHANT_ACCOUNT = changeme
-MERCHANT_SECRET = changeme
+SITE_URL=https://chytozavrik-frontend.vercel.app
+MERCHANT_ACCOUNT=changeme
+MERCHANT_SECRET=changeme
 
-SQL_DATABASE = chytozavryk_db
-SQL_USER = changeme
-SQL_PASSWORD = changeme
-SQL_HOST = postgres_chytozavryk
-SQL_PORT = 6502
+SQL_DATABASE=chytozavryk_db
+SQL_USER=changeme
+SQL_PASSWORD=changeme
+SQL_HOST=postgres_chytozavryk
+SQL_PORT=5432
 
-REDIS_PASSWORD = changeme
-REDIS_PORT = 6503
-REDIS_HOST = redis_chytozavryk
+REDIS_PASSWORD=changeme
+REDIS_PORT=6503
+REDIS_HOST=redis_chytozavryk
 
-EMAIL_HOST = smtp.gmail.com
-EMAIL_PORT = 465
-EMAIL_USER = email@gmail.com
-EMAIL_PASSWORD = password
-
-CLOUD_NAME = changeme
-API_KEY = changeme
-API_SECRET = changeme
-
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=465
+EMAIL_USER=email@gmail.com
+EMAIL_PASSWORD=password
