--- a/frontend/.env_example
+++ b/frontend/.env_example
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_SERVER_URL=http://localhost:6501/api/v1
-NEXTAUTH_URL=http://localhost:3000/
-NEXTAUTH_SECRET=secret
+NEXT_PUBLIC_SERVER_URL=https://localhost:8000/api/v1
+NEXTAUTH_URL=https://localhost:3000/
+NEXTAUTH_SECRET=changeme
