--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,4 +1,4 @@
-FROM node:lts-slim
+FROM node:20-slim
 
 RUN mkdir /frontend_app
 
@@ -8,6 +8,6 @@ COPY frontend .
 
 RUN npm i
 ENV NODE_ENV=production
-RUN npm run build
+# RUN npm run build
 
 CMD bash -c "npm start"
