--- a/backend/.env_example
+++ b/backend/.env_example
@@ -3,14 +3,16 @@ SECRET_KEY=changeme
 DJANGO_SUPERUSER_EMAIL=admin@example.com
 DJANGO_SUPERUSER_PASSWORD=changeme
 
-SITE_URL=https://chytozavrik-frontend.vercel.app
+SITE_URL=https://chytozavryk.top
+BASE_URL=https://chytozavryk.top
+
 MERCHANT_ACCOUNT=changeme
 MERCHANT_SECRET=changeme
 
 SQL_DATABASE=chytozavryk_db
 SQL_USER=changeme
 SQL_PASSWORD=changeme
-SQL_HOST=postgres_chytozavryk
+SQL_HOST=postgres
 SQL_PORT=5432
 
 EMAIL_HOST=smtp.gmail.com
