--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,11 +40,12 @@
     "react-router": "^6.19.0",
     "react-router-dom": "^6.19.0",
     "react-select": "^5.8.0",
-    "react-slick": "^0.29.0",
+    "react-slick": "^0.30.0",
     "recharts": "^2.10.3",
     "sass": "^1.63.4",
     "sharp": "^0.32.5",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.5",
     "typescript": "5.1.3",
     "use-debounce": "^10.0.0",
     "yup": "^1.3.2"
