fix: photo path for avatars and child quizzes; feat: update frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,5 +70,5 @@ networks:
 volumes:
   postgres_chytozavryk:
   # redis_chytozavryk:
-  backend_app_chytozavryk:
+  # backend_app_chytozavryk:
   frontend_app_chytozavryk:
