--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
     "js-confetti": "^0.11.0",
     "jwt-decode": "^3.1.2",
     "lucide-react": "^0.260.0",
-    "next": "13.4.6",
+    "next": "^14.1.0",
     "next-auth": "^4.22.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
