--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -7,7 +7,9 @@ RUN mkdir /backend_app
 
 WORKDIR /backend_app
 
-COPY backend .
-
 RUN pip install -U pip
+
+COPY backend/requirements.txt .
 RUN pip install -r requirements.txt
+
+COPY backend .
